--- a/src/app/Private/Layout/private-layout/private-layout.component.html
+++ b/src/app/Private/Layout/private-layout/private-layout.component.html
@@ -2,12 +2,16 @@
   <app-header (sideNavToggled)="sideNavStatus = $event;"></app-header>
 
   <main>
-      <app-sidebar [sideNavStatus]="sideNavStatus" [ngClass]="{'app-sidenav-open' : sideNavStatus}"></app-sidebar>
-      <div class="display-area" [ngClass]="{'display-area-shrink' : sideNavStatus}">
-          <div class="container-fluid p-3 overflow-auto" style="height: calc(100vh - 4rem);">
-              <router-outlet></router-outlet>
-          </div>
-      </div>
+    <div class="d-flex">
+        <div class="sider-bar">
+            <app-sidebar [sideNavStatus]="sideNavStatus" [ngClass]="{'app-sidenav-open' : sideNavStatus , 'app-sidenav-close' : !sideNavStatus}"></app-sidebar>
+        </div>
+        <div class="display-area" [ngClass]="{'display-area-shrink' : sideNavStatus}">
+            <div class="container-fluid p-3 overflow-auto" style="height: calc(100vh - 4rem);">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
   </main>
 </div>
-
+  
