--- a/src/app/Public/create-password/create-password.component.html
+++ b/src/app/Public/create-password/create-password.component.html
@@ -1,28 +1,26 @@
 <div class="card" >
     <div class="card-body">
-      <h5 class="card-title">Create Password</h5>
-      <form >
+      <h5 class="card-title">Reset Password</h5>
+      <form [formGroup]="ValidateForm" >
         <div class="mb-3">
-            <label for="username" class="form-label" style="color: black; font-weight: bold ;">UserName</label>
-            <input style="border: solid 1 px; color:black;" type="text" id="username" placeholder="User Required" name="username" class="form-control" required>
+            <label for="username" class="form-label" style="color: black; font-weight: bold ;">Current Password</label>
+            <input style="border: solid 1 px; color:black;" type="text" id="username" placeholder="User Required" formControlName="currentPassword" name="username" class="form-control" required>
         </div>
         <div class="mb-3">
-            <label for="email" class="form-label" style="color: black; font-weight: bold ;">Email</label>
-            <input type="email" id="email" name="email" class="form-control" placeholder="Email Required" required>
+            <label for="email" class="form-label" style="color: black; font-weight: bold ;">New Password</label>
+            <input type="email" id="email" name="email" class="form-control" formControlName="newPassword" placeholder="Email Required" required>
         </div>
         <div class="mb-3">
-            <label for="password" class="form-label" style="color: black; font-weight: bold ;">Password</label>
+            <label for="password" class="form-label" style="color: black; font-weight: bold ;">Confirm Password</label>
             <div class="input-group">
-                <input type="password" id="password" name="password" class="form-control" placeholder="Pasword Required"  required>
+                <input type="password" id="password" name="password" class="form-control" formControlName="confirmPassword" placeholder="Pasword Required"  required>
                 <button class="btn btn-outline-secondary" type="button" >
                     <i class="bi bi-eye-slash"></i>
                 </button>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary active" >Register</button>
+        <button type="submit" (click)="Submit()" class="btn btn-primary active" >Save</button>
     </form>
-    <div class="text-center mt-3">
-        Already registered? <a routerLink="/login">Login here</a>
-    </div>
+    
     </div>
   </div>
