--- a/src/app/Public/login/login.component.html
+++ b/src/app/Public/login/login.component.html
@@ -1,26 +1,48 @@
+<div class="container d-flex flex-column justify-content-center align-items-center mt-2" style="min-height: 100vh;">
 
-<br/><div class="card" >
-    <div class="card-body">
-      <h5 class="card-title" style="font-weight: bold;font-size: 40px;">Login</h5>
-      <form [formGroup]="validateForm">
-       
-        <div class="mb-3">
-            <label for="email" class="form-label" style="color: black; font-weight: bold ;">Email</label>
-            <input type="email" id="email" name="email" class="form-control" formControlName="email"  placeholder="Email Required" required>
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label" style="color: black; font-weight: bold;">Password</label>
-            <div class="input-group">
-                <input type="password" id="password" name="password" class="form-control" formControlName="password"  placeholder="Pasword Required"  required>
-                <button class="btn btn-outline-secondary" type="button" >
-                    <i class="bi bi-eye-slash"></i>
-                </button>
+    <form [formGroup]="validateForm">
+        <div class="card mt-5 p-5 " style="height: 275px;">
+            <div>
+                <h4 class="mb-5 text-white" style="color: white; font-size: 25px; margin-top: -15px;">
+                    Employee Management
+                </h4>
+                <div style="text-align: center; color: white; font-size: large; font-weight: 600">
+                    Sign In
+                </div>
             </div>
+            <br>
+
+            <a href="/login" class="btn btn-primary btn-lg">
+                <small style="font-size: 17px;color:blue">Not a member?</small>
+                <span><small style="font-size: 13px; color: white">Sign Up</small></span>
+            </a>
         </div>
-        <button type="submit" class="btn btn-primary active" (click)="onSubmit()" >Login</button>
+        <br>
+        <div class="card two bg-white px-5 py-4 mb-3" style="height: 350px;">
+            <div class="form-group">
+                <input type="email" id="email" name="email" class="form-control" formControlName="email"
+                    placeholder="User ID" onfocus="this.style.background='#FFEEA8';"
+                    onblur="this.style.background='white';">
+                   
+
+
+            </div>
+
+            <br><br>
+            <div class="form-group">
+                <input type="password" id="password" name="password" class="form-control" formControlName="password"
+                    placeholder="Password" onfocus="this.style.background='#FFEEA8';"
+                    onblur="this.style.background='white';">
+
+            </div>
+            <button type="submit" id="btnLogin" (click)="onSubmit()" class="btn btn-primary btn-lg mt-1 mb-2">
+                <span>Login <span style="font-size: 15px;" aria-hidden="true"
+                        class="fa fa-arrow-right fa-lg"></span></span>
+            </button>
+            <a routerLink="/login"
+                style="text-align: center; font-size: 15px; text-decoration: none; transition: color 0.3s ease, text-decoration 0.3s ease;">
+                Forgot Password?
+            </a>
+        </div>
     </form>
-    <div class="text-center mt-3">
-        Already registered? <a routerLink="/login">Login here</a>
-    </div>
-    </div>
-  </div>
+</div>
