--- a/src/app/Public/public-layout/public-layout.component.html
+++ b/src/app/Public/public-layout/public-layout.component.html
@@ -1,5 +1,7 @@
-<div class="container">
-    
-    <router-outlet></router-outlet>
-    
-</div>
+<section class="wrapper">
+    <div class="container">
+        <!-- https://syslyncerp.com/Images/120700.jpg -->
+        <router-outlet></router-outlet>
+
+    </div>
+</section>
