--- a/src/app/Private/Layout/private-layout/private-layout.component.css
+++ b/src/app/Private/Layout/private-layout/private-layout.component.css
@@ -26,14 +26,19 @@ app-sidenav{
 .app-sidenav-open{
   width:250px
 }
+.app-sidenav-close{
+  margin-left: -250px
+}
+
 .display-area{
   position: absolute;
-  left:60px;
+  left:200px;
   width:calc(100% - 60px);
-  transition: left 250ms ease-in, width 250ms ease-in;
+  /* transition: left 250ms ease-in, width 250ms ease-in; */
 }
 
 .display-area-shrink{
-  width: calc(100% - 250px);
+  /* width: calc(100% - 250px); */
   left: 250px;
 }
+
