--- a/src/app/Private/Layout/sidebar/sidebar.component.css
+++ b/src/app/Private/Layout/sidebar/sidebar.component.css
@@ -6,6 +6,8 @@
   width:230px;
   margin: 10px 10px 0 10px;
   background-color: black;
+  transition: .5s;
+  position: absolute;
 }
 
 .nav-list{
@@ -21,12 +23,12 @@
   height: 50px;
 }
 
-.nav-list-open .nav-list-item :hover{
+.nav-list-open .nav-list-item:hover{
   background-color: rgba(255,255,255,0.3);
   border-radius: 10px;
 }
 
-.nav-list-item i { 
+.nav-list-item i {
   font-size: 20px;
   height: 25px;
   width: 25px;
@@ -35,7 +37,7 @@
   line-height: 25px;
 }
 
-.nav-list-item span { 
+.nav-list-item span {
   width: 170px;
   text-transform: capitalize;
 }
@@ -43,3 +45,10 @@ a {
   text-decoration: none;
   color:white
 }
+
+ /* .close-sidebar{
+  margin-left: -150px;
+} 
+.open-sidebar{
+  margin-left: 10px;
+}  */
