ft : implementing forms

--- a/src/app/Private/Layout/header/header.component.html
+++ b/src/app/Private/Layout/header/header.component.html
@@ -1,9 +1,10 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark px-2">
+<nav class="navbar navbar-expand navbar-dark  px-2" style="background-color: rgb(6, 6, 94);">
   <div class="side-nav-button p-2 me-2 text-light" (click)="SideNavToggle()">
     <header class="header white-bg">
       <div class="sidebar-toggle-box">
         <div class="fa-solid fa-bars tooltips" data-placement="fa-arrow-right" data-original-title="Toggle Navigation">
         </div>
+        toggle
       </div>
     </header>
   </div>
