--- a/src/app/Private/Layout/private-layout/private-layout.component.css
+++ b/src/app/Private/Layout/private-layout/private-layout.component.css
@@ -14,17 +14,20 @@ app-sidenav{
   position: absolute;
   left :0rem;
   width:60px;
-  height: calc(100vh - 4rem);
+  height: calc(100vh );
   box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-  background-color: rgba(34,34,34,1);
-  border-top:1px solid white;
-  overflow-x: hidden;
-  white-space: nowrap;
+  background-color: #113c60;
+  color: #fff;
+  border-top: 1px solid;
+  /* overflow-x: hidden;
+  white-space: nowrap; */
   transition: width 250ms ease-in;
+  /* margin-top: -3px; */
 }
 
 .app-sidenav-open{
-  width:250px
+  width:250px;
+  margin-top: -5px;
 }
 .app-sidenav-close{
   margin-left: -250px
@@ -32,13 +35,13 @@ app-sidenav{
 
 .display-area{
   position: absolute;
-  left:200px;
-  width:calc(100% - 60px);
-  /* transition: left 250ms ease-in, width 250ms ease-in; */
+  left:250px;
+  width: calc(87% - 45px);
+  background-color: lightgray;
+  transition: left 250ms ease-in, width 250ms ease-in;
 }
 
-.display-area-shrink{
-  /* width: calc(100% - 250px); */
-  left: 250px;
-}
-
+  /* .display-area-shrink{
+    width: calc(100% - 150px);
+    left: 250px;
+  } */
