--- a/src/app/Public/create-password/create-password.component.html
+++ b/src/app/Public/create-password/create-password.component.html
@@ -1,6 +1,6 @@
 <div class="card" >
     <div class="card-body">
-      <h5 class="card-title">Reset Password</h5>
+      <h5 style="color: darkgreen; font-weight: bold; font-size: 30px;" class="card-title">Reset Password</h5>
       <form [formGroup]="ValidateForm" >
         <div class="mb-3">
             <label for="username" class="form-label" style="color: black; font-weight: bold ;">Current Password</label>
