--- a/src/app/Private/Layout/sidebar/sidebar.component.html
+++ b/src/app/Private/Layout/sidebar/sidebar.component.html
@@ -1,4 +1,5 @@
-<div class="side-nav-content" [ngClass]="{'close-sidebar' :sideNavStatus , 'open-sidebar' :!sideNavStatus}">
+<div class="side-nav-content">
+  <!-- [ngClass]="{'close-sidebar' :sideNavStatus , 'open-sidebar' :!sideNavStatus}" -->
   <ul class="nav-list" [ngClass]="{'nav-list-open' : sideNavStatus}">
     <div *ngFor="let item of menuItems">
 
@@ -11,7 +12,7 @@
       </li>
 
 
-      <li (click)="logout()" class="nav-list-item" *ngIf="item.title == 'Logout'" >
+      <li (click)="logout()" class="nav-list-item" *ngIf="item.title == 'Logout'">
         <i [class]="item.icon"></i>
         <span>
           <a href="javascript:;">{{item.title}}</a>
